src/test/deca/syntax/parser/invalid/field_definition_visibility_reserved_word.deca
// Test parser, déclaration d'une méthode avec une visibilité
// qui est un mot réservé

class myClass {
    true int x = 12;
}